# project-interpop

./: .gitignore  README.md
base-e2e-example/: Cargo.toml
base-example/: Cargo.toml
dao_with_nft_verification/: Cargo.toml  README.md  lib.rs
execute_on_hydra/: Cargo.toml  README.md  execute_on_hydra_metadata.json  lib.rs
hydra-playground/: lib.rs  xcm.rs
hydra-playground/integration-tests/: Cargo.toml
hydra-playground/polkadot-nextjs-starter/: package-lock.json
hydra-playground/polkadot-nextjs-starter/.papi/: polkadot-api.json
hydra-playground/polkadot-nextjs-starter/.papi/contracts/: execute_on_hydra.json
hydra-playground/polkadot-nextjs-starter/.papi/descriptors/: package.json
hydra-playground/polkadot-nextjs-starter/.papi/metadata/: pop.scale  pop_tmp.scale  sdk_tmp.scale
hydra-playground/polkadot-nextjs-starter/app/: page.tsx
hydra-playground/polkadot-nextjs-starter/providers/: chain-provider.tsx
hydra-swap/: Cargo.toml  README.md
hydra-swap/swap-widget-ui/: package-lock.json  package.json  pnpm-lock.yaml
hydra-swap/swap-widget-ui/app/: page.tsx
hydration-swapping/: Cargo.toml  README.md  lib.rs  xcm.rs
hydration-swapping/swap-widget/: .gitignore  README.md  package.json
hydration-swapping/swap-widget-ui/: papi-config.ts
hydration-swapping/swap-widget-ui/.papi/: polkadot-api.json
hydration-swapping/swap-widget-ui/.papi/contracts/: hydration-swapping.json
hydration-swapping/swap-widget/contracts/: deployments.ts  package.json
hydration-swapping/swap-widget/ui/: index.html  package.json  vite.config.ts
hydration-swapping/swap-widget/ui/src/: main.tsx  types.ts
hydration-swapping/swap-widget/ui/src/components/shared/: AccountSelection.tsx  WalletSelection.tsx
hydration-swapping/swap-widget/ui/src/providers/: AppProvider.tsx  WalletConnectorProvider.tsx
