[package]
name = "execute_on_hydra"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink = { version = "5.1.0", default-features = false }
pop-api = { git = "https://github.com/r0gue-io/pop-node", default-features = false, features = ["messaging"]}

[dev-dependencies]
ink_e2e = { version = "5.1.0" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "pop-api/std"
]
ink-as-dependency = []
e2e-tests = []
