[package]
authors = [ "R0GUE <go@r0gue.io>" ]
edition = "2021"
name = "hydration-swapping"
version = "0.1.0"

[workspace]

[dependencies]
ink = { version = "5.1.0", default-features = false }
pop-api = { git = "https://github.com/r0gue-io/pop-node", default-features = false, features = [ "messaging" ] }

[lib]
path = "lib.rs"

[features]
default = [ "std" ]
e2e-tests = [  ]
ink-as-dependency = [  ]
std = [
	"ink/std",
	"pop-api/std",
]
